# lvm

./: Cargo.toml  Dockerfile  Dockerfile.build  README.md  README_zh.md  install.sh
.github/workflows/: check.yml  release.yml
skills/lvm/: SKILL.md
skills/lvm/references/: add-new-language.md  architecture.md  coding-rules.md  design-decisions.md  env-and-config.md  project-structure.md  workflow.md
src/: config.rs  lib.rs  main.rs
src/commands/: alias.rs  cache.rs  cli.rs  current.rs  debug.rs  dispatch.rs  env.rs  hook.rs  install.rs  list.rs  list_remote.rs  mod.rs  output.rs  reinstall.rs  unalias.rs  uninstall.rs  use_version.rs  which.rs
src/commands/alias/: mod.rs  unalias.rs
src/commands/cache/: mod.rs
src/commands/current/: mod.rs
src/commands/debug/: mod.rs
src/commands/env/: mod.rs
src/commands/hook/: mod.rs
src/commands/install/: mod.rs
src/commands/list/: mod.rs  remote.rs
src/commands/prune/: mod.rs
src/commands/reinstall/: mod.rs
src/config/: alias.rs  display.rs  lvmrc.rs  mod.rs
src/core/: alias.rs  checksum.rs  config.rs  display.rs  download.rs  extract.rs  fslink.rs  http.rs  lvmrc.rs  mod.rs  report.rs  version.rs
src/dispatch/: mod.rs
src/language/: checksum.rs  download.rs  extract.rs  fslink.rs  http.rs  language_trait.rs  mod.rs  registry.rs  report.rs  version.rs
src/language/go/: mod.rs  (+2 more)
src/plugin/: download.rs  fslink.rs  http.rs  mod.rs  registry.rs  report.rs  version.rs
tests/core/: checksum_test.rs  config_test.rs  extract_test.rs  fslink_test.rs  http_test.rs  mod.rs  report_test.rs  version_test.rs
(+28 files in other folders)
